* Changed Windows to build in console mode even for stable releases
* Changed gnuplot initialization to keep plots open after stopping main process (and fixed leak)
* Improved clipping model in luminance-based GHS stretches
* Added GHS saturation stretch mode
* Fixed UI and command issues in deconvolution code
* Print help and deconvolution tips URLs to the log
* Fixed star recomposition issue where LIVETIME and STACKCNT could be doubled when obviously
  processing the starless and star mask parts of the same image
* Fixed "image copy error in previews" bug in asinh transformation
* Fixed reset of the viewports when reopening the RGB composition tool after opening a mono sequence
* Fixed terminology - "weighted" instead of "weighed", consistency in name of PCC tool
* Enable detection for undersampled mono images
* Improve Wayland support
* Fixed incorrect option name in `show` help text
* Prevent cleaning stats from resetting the reference image
* Fixed photometry with 32bit images from PRISM
* Add Astro-TIFF in sequence export
* Force statistics for all images not from Siril (ensures DATAMAX is correct)
* Fixed incorrect behaviour when resetting right-hand stretch type in star recomposition tool
* Fix GNUplot terminals so they remain interactive and free resources when closed
* Fixed crash that could occur when parsing string keywords that contained forbidden characters

siril 1.2.0-beta2
03/12/23

* Fixed behavior on Windows when calling external programs (StarNet, astrometry.net)
* Fixed crash when converting sequence to SER
* Fixed PCC progress bar which never terminated
* Fixed AppImage Build
* Fixed crash when using deconvolution on a sequence
* Fixed SSL certificates locations on Windows which where preventing SearchObject related functions to succeed
* Fixed reading BAYERPAT key if it was set to NONE
* Fixed StarNet behavior when TIFF compression was ON
* Fixed crash in synthstar (full resynthetize and desaturate)