@@ -179,4 +179,6 @@ struct generic_seq_metadata_args {
 
 gpointer generic_sequence_metadata_worker(gpointer args);
 
+void kill_child_process(gboolean on_exit);
+
 #endif
