@@ -1687,6 +1687,7 @@ void gtk_main_quit() {
 	exit_com_gnuplot_handles(); // close any remaining open GNUplot handles
 	close_sequence(FALSE);	// save unfinished business
 	close_single_image();	// close the previous image and free resources
+	kill_child_process(TRUE); // kill running child processes if any
 	g_slist_free_full(com.pref.gui.script_path, g_free);
 	exit(EXIT_SUCCESS);
 }
