@@ -15,8 +15,7 @@ xx/xx/xx
 * Added GHS saturation stretch mode
 * Fixed UI and command issues in deconvolution code
 * Print help and deconvolution tips URLs to the log
-* Fixed star recomposition issue where LIVETIME and STACKCNT could be doubled when obviously
-  processing the starless and star mask parts of the same image
+* Fixed star recomposition issue where LIVETIME and STACKCNT could be doubled when processing the starless and star mask parts of the same image
 * Fixed "image copy error in previews" bug in asinh transformation
 * Fixed reset of the viewports when reopening the RGB composition tool after opening a mono sequence
 * Fixed terminology - "weighted" instead of "weighed", consistency in name of PCC tool
@@ -30,6 +29,8 @@ xx/xx/xx
 * Fixed incorrect behaviour when resetting right-hand stretch type in star recomposition tool
 * Fix GNUplot terminals so they remain interactive and free resources when closed
 * Fixed crash that could occur when parsing string keywords that contained forbidden characters
+* Fixed calling external processes that left too many opened file descriptors
+* Fixed Stop behavior for starnet and local astrometry.net
 
 v1.2.0-beta2 March 12, 2023
 
